syntax = "proto3";

                 package clreDedMdlStsz;
service ClreDedMdlStszService {
 rpc createClreDedMdlStsz (ClreDedMdlStszCreateInput) returns (ClreDedMdlStsz) {}
rpc clreDedMdlStszs (findManyParams) returns (stream ClreDedMdlStsz) {}
rpc clreDedMdlStsz (ClreDedMdlStszWhereUniqueInput) returns (ClreDedMdlStsz) {}
rpc updateClreDedMdlStsz (ClreDedMdlStszUpdateInput) returns (ClreDedMdlStsz) {}
rpc deleteClreDedMdlStsz (ClreDedMdlStszWhereUniqueInput) returns (ClreDedMdlStsz) {} 
 }
message ClreDedMdlStszCreateInput {
int32 cachAmt = 1;
string cachCurrCd = 2;
int32 cachFxrt = 3;
int32 cachNcyAmt = 4;
string createdAt = 5;
int32 ddctAmt = 6;
string ddctCurrCd = 7;
int32 ddctFxrt = 8;
int32 ddctNcyAmt = 9;
int32 ddctRt = 10;
string delYn = 11;
string frstRegstId = 12;
string frstRgsrDttm = 13;
string id = 14;
int32 indrPymnTamt = 15;
int32 infeeAmt = 16;
string infeeCurrCd = 17;
int32 infeeFxrt = 18;
int32 infeeNcyAmt = 19;
string ingrNm = 20;
int32 invcAmt = 21;
string invcCurrCd = 22;
int32 invcFxrt = 23;
int32 invcNcyAmt = 24;
int32 invcUsdAmt = 25;
string lastChgDttm = 26;
string lastChprId = 27;
int32 mdfyDgcnt = 28;
string mdlStszNm = 29;
string mdlStszNo = 30;
int32 otcstAmt = 31;
string otcstCurrCd = 32;
int32 otcstFxrt = 33;
int32 otcstNcyAmt = 34;
string pdlsNo = 35;
int32 qty = 36;
string qtyUtCd = 37;
string reffNo = 38;
int32 ttxbsNcyAmt = 39;
int32 ttxbsUsdAmt = 40;
int32 tvlutNcyAmt = 41;
int32 tvlutUsdAmt = 42;
string updatedAt = 43;
int32 utPrc = 44;
};
message ClreDedMdlStsz {
int32 cachAmt = 1;
string cachCurrCd = 2;
int32 cachFxrt = 3;
int32 cachNcyAmt = 4;
string createdAt = 5;
int32 ddctAmt = 6;
string ddctCurrCd = 7;
int32 ddctFxrt = 8;
int32 ddctNcyAmt = 9;
int32 ddctRt = 10;
string delYn = 11;
string frstRegstId = 12;
string frstRgsrDttm = 13;
string id = 14;
int32 indrPymnTamt = 15;
int32 infeeAmt = 16;
string infeeCurrCd = 17;
int32 infeeFxrt = 18;
int32 infeeNcyAmt = 19;
string ingrNm = 20;
int32 invcAmt = 21;
string invcCurrCd = 22;
int32 invcFxrt = 23;
int32 invcNcyAmt = 24;
int32 invcUsdAmt = 25;
string lastChgDttm = 26;
string lastChprId = 27;
int32 mdfyDgcnt = 28;
string mdlStszNm = 29;
string mdlStszNo = 30;
int32 otcstAmt = 31;
string otcstCurrCd = 32;
int32 otcstFxrt = 33;
int32 otcstNcyAmt = 34;
string pdlsNo = 35;
int32 qty = 36;
string qtyUtCd = 37;
string reffNo = 38;
int32 ttxbsNcyAmt = 39;
int32 ttxbsUsdAmt = 40;
int32 tvlutNcyAmt = 41;
int32 tvlutUsdAmt = 42;
string updatedAt = 43;
int32 utPrc = 44;
};
message ClreDedMdlStszWhereUniqueInput {
int32 cachAmt = 1;
string cachCurrCd = 2;
int32 cachFxrt = 3;
int32 cachNcyAmt = 4;
string createdAt = 5;
int32 ddctAmt = 6;
string ddctCurrCd = 7;
int32 ddctFxrt = 8;
int32 ddctNcyAmt = 9;
int32 ddctRt = 10;
string delYn = 11;
string frstRegstId = 12;
string frstRgsrDttm = 13;
string id = 14;
int32 indrPymnTamt = 15;
int32 infeeAmt = 16;
string infeeCurrCd = 17;
int32 infeeFxrt = 18;
int32 infeeNcyAmt = 19;
string ingrNm = 20;
int32 invcAmt = 21;
string invcCurrCd = 22;
int32 invcFxrt = 23;
int32 invcNcyAmt = 24;
int32 invcUsdAmt = 25;
string lastChgDttm = 26;
string lastChprId = 27;
int32 mdfyDgcnt = 28;
string mdlStszNm = 29;
string mdlStszNo = 30;
int32 otcstAmt = 31;
string otcstCurrCd = 32;
int32 otcstFxrt = 33;
int32 otcstNcyAmt = 34;
string pdlsNo = 35;
int32 qty = 36;
string qtyUtCd = 37;
string reffNo = 38;
int32 ttxbsNcyAmt = 39;
int32 ttxbsUsdAmt = 40;
int32 tvlutNcyAmt = 41;
int32 tvlutUsdAmt = 42;
string updatedAt = 43;
int32 utPrc = 44;
};
message ClreDedMdlStszUpdateInput {
int32 cachAmt = 1;
string cachCurrCd = 2;
int32 cachFxrt = 3;
int32 cachNcyAmt = 4;
string createdAt = 5;
int32 ddctAmt = 6;
string ddctCurrCd = 7;
int32 ddctFxrt = 8;
int32 ddctNcyAmt = 9;
int32 ddctRt = 10;
string delYn = 11;
string frstRegstId = 12;
string frstRgsrDttm = 13;
string id = 14;
int32 indrPymnTamt = 15;
int32 infeeAmt = 16;
string infeeCurrCd = 17;
int32 infeeFxrt = 18;
int32 infeeNcyAmt = 19;
string ingrNm = 20;
int32 invcAmt = 21;
string invcCurrCd = 22;
int32 invcFxrt = 23;
int32 invcNcyAmt = 24;
int32 invcUsdAmt = 25;
string lastChgDttm = 26;
string lastChprId = 27;
int32 mdfyDgcnt = 28;
string mdlStszNm = 29;
string mdlStszNo = 30;
int32 otcstAmt = 31;
string otcstCurrCd = 32;
int32 otcstFxrt = 33;
int32 otcstNcyAmt = 34;
string pdlsNo = 35;
int32 qty = 36;
string qtyUtCd = 37;
string reffNo = 38;
int32 ttxbsNcyAmt = 39;
int32 ttxbsUsdAmt = 40;
int32 tvlutNcyAmt = 41;
int32 tvlutUsdAmt = 42;
string updatedAt = 43;
int32 utPrc = 44;
};
message findManyParams {

};